samples/envoy-http-scaler/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
        - name: http-server
          image: ghcr.io/kedify/sample-http-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          env:
            - name: RESPONSE_DELAY
              value: "0.0"
---
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: http
  selector:
    app: http-server
---
apiVersion: keda.sh/v1alpha1
kind: ScaledObject
metadata:
  name: http-server
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: http-server
  cooldownPeriod: 5
  minReplicaCount: 1
  maxReplicaCount: 10
  fallback:                                       
    failureThreshold: 2           
    replicas: 1
  advanced:                                              
    restoreToOriginalReplicaCount: true            
    horizontalPodAutoscalerConfig:
      behavior:
        scaleDown:
          stabilizationWindowSeconds: 5
  triggers:
  - type: kedify-envoy-http
    metadata:
      scalingMetric: requestRate
      targetValue: "10"
      externalProxyMetricKey: "test"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - args:
        - --config-yaml
        - $(ENVOY_CONFIG)
        env:
        - name: ENVOY_CONFIG
          value: |-
            stats_flush_interval: 1s
            stats_sinks:
            - "name": "kedify_metrics_sink"
              "typed_config":
                "@type": "type.googleapis.com/envoy.config.metrics.v3.MetricsServiceConfig"
                "emit_tags_as_labels": true
                "grpc_service":
                  "envoy_grpc":
                    "cluster_name": "kedify_metrics_service"
                  "retry_policy":
                    "host_selection_retry_max_attempts": 1
                    "num_retries": 2
                    "retry_back_off":
                      "base_interval": "0.5s"
                      "max_interval": "10s"
                    "retry_host_predicate":
                    - "name": "envoy.retry_host_predicates.previous_hosts"
                      "typed_config":
                        "@type": "type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate"
                    "retry_on": "5xx,gateway-error,refused-stream,connect-failure"
                "report_counters_as_deltas": true
                "transport_api_version": "V3"
            node:
              id: kedify-proxy
              cluster: xds_cluster
            admin:
              address:
                socket_address:
                  address: 0.0.0.0
                  port_value: 9901
            static_resources:
              listeners:
              - name: listener_0
                address:
                  socket_address: { address: 0.0.0.0, port_value: 8080 }
                filter_chains:
                - filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      stat_prefix: ingress_http
                      codec_type: AUTO
                      route_config:
                        name: local_route
                        virtual_hosts:
                        - name: local_service
                          domains: ["*"]
                          routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: test
                              auto_host_rewrite: false
                      http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              clusters:
              - "circuit_breakers":
                  "thresholds":
                  - "max_connections": 5000
                    "max_pending_requests": 5000
                    "max_requests": 7000
                    "max_retries": 5
                    "priority": "DEFAULT"
                  - "max_connections": 5000
                    "max_pending_requests": 5000
                    "max_requests": 7000
                    "max_retries": 5
                    "priority": "HIGH"
                "connect_timeout": "2s"
                "dns_refresh_rate": "3600s"
                "lb_policy": "ROUND_ROBIN"
                "least_request_lb_config":
                  "choice_count": 5
                "load_assignment":
                  "cluster_name": "kedify_metrics_service"
                  "endpoints":
                  - "lb_endpoints":
                    - "endpoint":
                        "address":
                          "socket_address":
                            "address": "keda-add-ons-http-interceptor-kedify-proxy-metric-sink.keda"
                            "port_value": 9901
                "name": "kedify_metrics_service"
                "outlier_detection":
                  "base_ejection_time": "60s"
                  "consecutive_5xx": 5
                  "interval": "15s"
                  "max_ejection_percent": 25
                  "split_external_local_origin_errors": true
                "per_connection_buffer_limit_bytes": 52428800
                "type": "STRICT_DNS"
                "typed_extension_protocol_options":
                  "envoy.extensions.upstreams.http.v3.HttpProtocolOptions":
                    "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
                    "explicit_http_config":
                      "http2_protocol_options":
                        "allow_connect": true
                        "connection_keepalive":
                          "connection_idle_interval": "60s"
                          "interval": "60s"
                          "timeout": "5s"
                "upstream_connection_options":
                  "tcp_keepalive":
                    "keepalive_interval": 10
                    "keepalive_probes": 5
                    "keepalive_time": 60
              - name: test
                connect_timeout: 10s
                type: STRICT_DNS
                lb_policy: ROUND_ROBIN
                load_assignment:
                  cluster_name: test
                  endpoints:
                  - lb_endpoints:
                    - endpoint:
                        address:
                          socket_address:
                            address: http-server
                            port_value: 8081
        image: envoyproxy/envoy:v1.33.0
        imagePullPolicy: IfNotPresent
        name: envoy
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: envoy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy
spec:
  rules:
  - host: "demo.keda"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: envoy
              port:
                number: 8080
